Fix profile layout bug

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 3fr;
     font-family: Roboto, sans-serif;
 }
 
@@ -114,6 +113,16 @@ button {
     font-weight: bold;
 }
 
+.profile-container img {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+}
+
+.profile-container p {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+}
+
 .profile-avatar {
     width: 50px;
     height: 50px;
@@ -185,7 +194,8 @@ button {
 
 .cards-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 16px;
 }
 
@@ -217,7 +227,7 @@ button {
 }
 
 .card-icons img {
-    width: 24px;
+    width: 1.5rem;
 }
 
 .card,
